# pyext.zstd

./: .gitignore  LICENSE  README.md  pyext_zstd.cpp  setup.py  test_pyext_zstd.py  tox.ini
.github/workflows/: python-package.yml
pyext/zstd/: CMakeLists.txt  __init__.py  _zstdmodule.cpp  conanfile.txt
test/: test_pyext_zstd.py
